@@ -7,6 +7,11 @@
 
 ## Launch the game
 
+you have to enter the following command in the terminal:
+
+```bash
+java --module-path "/Users/aurelienruppe/Documents/javafx-sdk-21.0.3/lib" --add-modules javafx.controls,javafx.fxml -jar LevelOne.jar
+```
 
 
 ## How to play
